--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/AutoGenerateForm.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/AutoGenerateForm.cshtml
@@ -7,7 +7,7 @@
             .SimpleForm(Model)
             .RegisterEnums<Gender>()
             .AddRowsForModel()
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-6">
