--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/CustomizeErrors.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/CustomizeErrors.cshtml
@@ -7,7 +7,7 @@
             .SimpleForm(Model)
             .AddRowFor(profile => profile.First)
             .AddRowFor(profile => profile.Last)
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-6">
@@ -36,7 +36,7 @@
             })
             .AddRowFor(profile => profile.First)
             .AddRowFor(profile => profile.Last)
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-6">
@@ -70,7 +70,7 @@
             })
             .AddRowFor(profile => profile.First)
             .AddRowFor(profile => profile.Last)
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-6">
