--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/DataTypes.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/DataTypes.cshtml
@@ -8,7 +8,7 @@
             .SimpleForm(Model)
             .RegisterEnums<Gender>()
             .AddRowsForModel()
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
         
     </div>
