--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
@@ -11,10 +11,10 @@
         <h4>Email and Password</h4>
         @(await Html
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .AddHiddenRowFor(model => model.View)
+            .AddHiddenFor(model => model.View)
             .AddRowFor(model => model.Email)
             .AddRowFor(model => model.Password)
-            .AddSubmitButtonRow("Login")
+            .AddSubmitButton("Login")
             .RenderAsync())
     </div>
     <div class="col-md-7">
