--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/PostRedirectGet.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/PostRedirectGet.cshtml
@@ -6,7 +6,7 @@
         @(await Html
             .SimpleForm(Model)
             .AddRowsForModel()
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-6">
