--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/AppendCustomHtml.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/AppendCustomHtml.cshtml
@@ -7,7 +7,7 @@
         <h4>Append Custom HTML</h4>
         @(await Html
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .AddHiddenRowFor(model => model.View)
+            .AddHiddenFor(model => model.View)
             .AppendHtml(
                 @<div class="form-group">
                     <label>Append Html - First Name: @Model.First</label>
