--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/CheckboxesAndRadios.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/CheckboxesAndRadios.cshtml
@@ -10,10 +10,10 @@
         <h4>Checkboxes and Radios</h4>
         @(await Html
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .AddHiddenRowFor(model => model.View)
+            .AddHiddenFor(model => model.View)
             .AddCheckBoxRowFor(model => model.Flag)
             .AddRadioButtonRowFor(model => model.OtherCity, cityList, opt => opt.Inline = true)
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
