--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/DateTimeAndDate.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/DateTimeAndDate.cshtml
@@ -6,10 +6,10 @@
         <h4>DateTime and Date</h4>
         @(await Html
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .AddHiddenRowFor(model => model.View)
+            .AddHiddenFor(model => model.View)
             .AddRowFor(model => model.RandomDate)
             .AddRowFor(model => model.RandomDateOnly)
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
