--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/ReadonlyAndDisabled.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/ReadonlyAndDisabled.cshtml
@@ -6,11 +6,11 @@
         <h4>Readonly and Disabled</h4>
         @(await Html
             .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .AddHiddenRowFor(model => model.View)
+            .AddHiddenFor(model => model.View)
             .AddRowFor(model => model.First, opt => opt.IsReadOnly = true)
             .AddRowFor(model => model.Last)
             .AddRowFor(model => model.Disabled, opt=> opt.IsDisabled = true)
-            .AddSubmitButtonRow("Save Changes")
+            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
