--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/BasicUsage.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/BasicUsage.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Sockethead.Razor.Forms
-@model UserProfile
+@model UserProfileNoAttributes
 
 <div class="row">
     <div class="col-md-6">
@@ -8,7 +8,6 @@
             .AddHiddenFor(model => model.UserId)
             .AddTextBoxRowFor(model => model.First)
             .AddTextBoxRowFor(model => model.Last)
-            .AddTextBoxRowFor(model => model.JobTitle)
             .AddCheckBoxRowFor(model => model.IsAdmin)
             .RenderAsync())
     </div>
@@ -19,7 +18,6 @@
     .AddHiddenFor(model => model.UserId)
     .AddTextBoxRowFor(model => model.First)
     .AddTextBoxRowFor(model => model.Last)
-    .AddTextBoxRowFor(model => model.JobTitle)
     .AddCheckBoxRowFor(model => model.IsAdmin)
     .RenderAsync())</code></pre>
         <p>
@@ -39,13 +37,8 @@
         <pre><code>public class UserProfile
 {
    public Guid UserId { get; set; } = Guid.NewGuid();
-
    public string First { get; set; } = "John";
-
    public string Last { get; set; } = "Doe";
-
-   public string JobTitle { get; set; }
-
    public bool IsAdmin { get; set; }
 }</code></pre>
     </div>
