--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/EmailAndPassword.cshtml
@@ -1,23 +1,25 @@
-﻿@using Sockethead.Razor.Forms
-@model SampleModel
+﻿@model SampleModel
 
 <div class="row">
     <div class="col-md-5">
-        
-        @Html.EditorFor(m => m.Password)<br/>
-
-        <br/>
-        
-        <h4>Email and Password</h4>
         @(await Html
-            .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .AddHiddenFor(model => model.View)
+            .SimpleForm(Model)
             .AddRowFor(model => model.Email)
             .AddRowFor(model => model.Password)
-            .AddSubmitButton("Login")
             .RenderAsync())
     </div>
     <div class="col-md-7">
+        <h4>Razor</h4>
+        <pre><code>@@(await Html
+    .SimpleForm(Model)
+    .AddRowFor(model => model.Email)
+    .AddRowFor(model => model.Password)
+    .RenderAsync())
+        </code></pre>
+        <p>
+            Use DataType.EmailAddress and DataType.Password to render the appropriate input types.
+        </p>
+        <br/>
         <h4>Model</h4>
         <pre><code>@@public class LoginModel
 {
@@ -26,16 +28,7 @@
 
     [DataType(DataType.Password)] 
     public string Password { get; set; } = "password";
-}
-        </code></pre>
-        <h4>Form builder</h4>
-        <pre><code>@@(await Html
-    .SimpleForm(Model, opt => opt.ActionName = "Sample")
-    .EditorFor(model => model.Email)
-    .EditorFor(model => model.Password)
-    .SubmitButton("Login")
-    .RenderAsync())
-        </code></pre>
+}</code></pre>
         <p>
 
         </p>
