--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/Options.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/Options.cshtml
@@ -9,7 +9,7 @@
                 o.ActionName = "Options";
                 o.ControllerName = "SimpleForm";
                 o.FormMethod = FormMethod.Post;
-                o.HorizontalForm = true;
+                o.HorizontalForm = false;
                 o.HideLabels = false;
                 o.ShowError = true;
                 o.ErrorMessage = "Oops!  We had a problem processing the form.";
@@ -27,7 +27,7 @@
         o.ActionName = "Options";
         o.ControllerName = "SimpleForm";
         o.FormMethod = FormMethod.Post;
-        o.HorizontalForm = true;
+        o.HorizontalForm = false;
         o.HideLabels = false;
         o.ShowError = true;
         o.ErrorMessage = 
