--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/CheckboxesAndRadios.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/CheckboxesAndRadios.cshtml
@@ -1,30 +1,38 @@
-﻿@using Sockethead.Razor.Forms
-@model SampleModel
+﻿@model SampleModel
 
 @{
-    List<SelectListItem> cityList = new List<SelectListItem> { new("New York", "NY"), new("London", "LDN") };
+    List<SelectListItem> cityList = new () { new("New York", "NY"), new("London", "LDN") };
 }
 
 <div class="row">
     <div class="col-md-5">
-        <h4>Checkboxes and Radios</h4>
         @(await Html
-            .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .AddHiddenFor(model => model.View)
+            .SimpleForm(Model)
             .AddCheckBoxRowFor(model => model.Flag)
-            .AddRadioButtonRowFor(model => model.OtherCity, cityList, opt => opt.Inline = true)
-            .AddSubmitButton("Save Changes")
+            .AddRadioButtonRowFor(
+                model => model.OtherCity, cityList, 
+                opt => opt.Inline = false)
+            .AddRadioButtonRowFor(
+                model => model.OtherCity, 
+                cityList, opt => opt.Inline = true)
             .RenderAsync())
     </div>
     <div class="col-md-7">
-        <pre><code>@@List&lt;SelectListItem&gt; cityList = new List&lt;SelectListItem&gt;
-        { new("New York", "NY"), new("London", "LDN") };
+        <pre><code>@@List&lt;SelectListItem&gt; cityList = new()
+{ 
+    new("New York", "NY"), 
+    new("London", "LDN") 
+};
 
 @@(await Html
-    .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
-    .CheckBoxEditorFor(model => model.Flag)
-    .RadioButtonEditorFor(model => model.OtherCity, cityList, inline: false)
-    .SubmitButton("Save Changes")
+    .SimpleForm(Model)
+    .AddCheckBoxRowFor(model => model.Flag)
+    .AddRadioButtonRowFor(
+        model => model.OtherCity, cityList, 
+        opt => opt.Inline = false)
+    .AddRadioButtonRowFor(
+        model => model.OtherCity, 
+        cityList, opt => opt.Inline = true)
     .RenderAsync())
 </code></pre>
         <p>
