--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/DateTimeAndDate.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/DateTimeAndDate.cshtml
@@ -1,29 +1,36 @@
-﻿@using Sockethead.Razor.Forms
-@model SampleModel
+﻿@model SampleModel
 
 <div class="row">
     <div class="col-md-5">
-        <h4>DateTime and Date</h4>
         @(await Html
-            .SimpleForm(Model, opt => opt.ActionName = "Sample")
-            .AddHiddenFor(model => model.View)
+            .SimpleForm(Model)
             .AddRowFor(model => model.RandomDate)
             .AddRowFor(model => model.RandomDateOnly)
-            .AddSubmitButton("Save Changes")
             .RenderAsync())
     </div>
     <div class="col-md-7">
+        <h4>Razor</h4>
         <pre><code>@@(await Html
-    .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
-    .EditorFor(model => model.RandomDate)
-    .EditorFor(model => model.RandomDateOnly)
-    .SubmitButton("Login")
-    .RenderAsync())
-</code></pre>
+    .SimpleForm(Model)
+    .AddRowFor(model => model.RandomDate)
+    .AddRowFor(model => model.RandomDateOnly)
+    .RenderAsync())</code></pre>
         <p>
-            By default, a DateTime property will be rendered as a date and time picker. If you want to render it as a 
+            By default, a DateTime property will be rendered as a date and time picker. If you want to render it as a
             date picker only, you can use the <code>[DataType(DataType.Date)]</code> attribute.
         </p>
+        <br/>
+        <h4>Model</h4>
+        <pre><code>public class DateTimeModel 
+{
+    [Display(Name = "Random Date")]
+    public DateTime RandomDate { get; set; } = GetRandomDate();
+
+    [Display(Name = "Random Date Only")]
+    [DataType(DataType.Date)]
+    public DateTime RandomDateOnly { get; set; } = GetRandomDate();
+}</code></pre>
+        
     </div>
 </div>
 
