--- a/Sockethead.Web/Areas/Samples/Views/SimpleForm/DropDownList.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleForm/DropDownList.cshtml
@@ -1,30 +1,24 @@
-﻿@using Sockethead.Razor.Forms
-@model SampleModel
-
+﻿@model SampleModel
 @{
     List<SelectListItem> cityList = new List<SelectListItem> { new("New York", "NY"), new("London", "LDN") };
 }
 
 <div class="row">
     <div class="col-md-5">
-        <h4>Drop Down List</h4>
         @(await Html
             .SimpleForm(Model)
-            .AddHiddenFor(model => model.View)
             .AddEnumRowFor(model => model.SampleEnum)
             .AddDropDownListRowFor(model => model.City, cityList)
-            .AddListBoxFor(model => model.City, cityList)
-            .AddSubmitButton("Save Changes")
+            .AddListBoxRowFor(model => model.City, cityList)
             .RenderAsync())
     </div>
     <div class="col-md-7">
         <pre><code>@@(await Html
-    .SimpleForm(Model, new FormOptions { ActionName = "Sample" })
-    .EnumEditorFor(model => model.SampleEnum)
-    .SelectListEditorFor(model => model.City, cityList)
-    .SubmitButton("Save Changes")
-    .RenderAsync())
-</code></pre>
+    .SimpleForm(Model)
+    .AddEnumRowFor(model => model.SampleEnum)
+    .AddDropDownListRowFor(model => model.City, cityList)
+    .AddListBoxRowFor(model => model.City, cityList)
+    .RenderAsync())</code></pre>
         <p>
         </p>
     </div>
